# witness_optimizer

./: Cargo.toml
circom_algebra/: Cargo.toml
circom_algebra/src/: algebra.rs  modular_arithmetic.rs
circom_algebra/src/constraint_storage/: mod.rs
constant_tracking/: Cargo.toml
constraint_list/: Cargo.toml
constraint_list/src/: cluster_non_linear.rs  clusters_utils.rs  constraint_simplification.rs  lib.rs  non_linear_simplification.rs  preprocess_non_linear.rs  r1cs_porting.rs
constraint_writers/: Cargo.toml
optimizer/: Cargo.toml
optimizer/src/: Cargo.toml  lib.rs  main.rs
