[package]
name = "optimizer"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circom_algebra = { path = "../circom_algebra" }
constraint_writers = { path = "../constraint_writers" }
constraint_list = { path = "../constraint_list" }
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
serde = "1.0.136"
serde_json = "1.0"